# str2bool

./: setup.cfg
