[metadata]
name = str2bool
version = 1.1
description = Convert string to boolean
description_file = README.md
author = SymonSoft
author_email = symonsoft@gmail.com
url = https://github.com/Arthanadftz/str2bool
download_url = https://github.com/Arthanadftz/str2bool/archive/refs/heads/master.zip
keywords =
    str2bool
    bool
    boolean
    convert
    yes
    no
    true
    false
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Topic :: Utilities

[options]
packages = find:
python_requires = >=2.7
include_package_data = True
zip_safe = False
